@@ -226,12 +226,15 @@ bool terrain_filter::match_internal(const map_location& loc, const bool ignore_x
 			if(std::find(vals.begin(),vals.end(),std::string("lawful")) == vals.end()) {
 				return false;
 			}
-		} else {
-			if(std::find(vals.begin(),vals.end(),std::string("neutral")) == vals.end()) {
+		} else if(tod.liminal_bonus>0) {
+			if(std::find(vals.begin(),vals.end(),std::string("liminal")) == vals.end()) {
 				return false;
 			}
+		} else if(std::find(vals.begin(),vals.end(),std::string("neutral")) == vals.end()) {
+			return false;
 		}
 	}
+
 	if(!tod_id.empty()) {
 		if(tod_id != tod.id) {
 			if(std::find(tod_id.begin(),tod_id.end(),',') != tod_id.end() &&
